データーベース周りの環境構築

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=mybatis-firstdemo
+spring.datasource.url=jdbc:mysql://localhost:3306/player_list
+spring.datasource.username=user
+spring.datasource.password=password
