--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.8'
 services:
   db:
     build: .
-    container_name: docker-mysql-hands-on
+    container_name: player-db-container
     platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: movie_list
+      MYSQL_DATABASE: player_list
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
